gccida/g2/walk_tree
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/walk_tree/src/tree-inline.c:1572:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code v10; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/walk_tree/src/tree-inline.c:1614:26: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
if ( statement_code_p( ( tree_code)*( ( unsigned __int8 *)*v6 + 16)) && ( *( ( _BYTE *)*v6 + 19) & 4) == 0 ) 
                         ^~~~~~~~~
                         tree_cons
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/walk_tree/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/walk_tree/src/tree-inline.c:1614:36: error: invalid operands to binary expression ('tree (tree, tree, tree)' (aka 'union tree_node *(union tree_node *, union tree_node *, union tree_node *)') and 'unsigned char *')
if ( statement_code_p( ( tree_code)*( ( unsigned __int8 *)*v6 + 16)) && ( *( ( _BYTE *)*v6 + 19) & 4) == 0 ) 
                       ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/walk_tree/src/tree-inline.c:1661:66: error: expected expression
result = lang_hooks_0.tree_inlining.walk_subtrees( ( tree_node **)v6, walk_subtrees, func, data, htab_); 
                                                                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/walk_tree/src/tree-inline.c:1661:54: error: use of undeclared identifier 'tree_node'
result = lang_hooks_0.tree_inlining.walk_subtrees( ( tree_node **)v6, walk_subtrees, func, data, htab_); 
                                                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/walk_tree/src/tree-inline.c:1661:10: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
result = lang_hooks_0.tree_inlining.walk_subtrees( ( tree_node **)v6, walk_subtrees, func, data, htab_); 
         ^~~~~~~~~~~~
         lang_hooks
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/walk_tree/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/walk_tree/src/tree-inline.c:1779:67: error: expected expression
&& !lang_hooks_0.tree_inlining.tree_chain_matters_p( ( tree_node *)*v6) ) 
                                                                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/walk_tree/src/tree-inline.c:1779:56: error: use of undeclared identifier 'tree_node'
&& !lang_hooks_0.tree_inlining.tree_chain_matters_p( ( tree_node *)*v6) ) 
                                                       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/walk_tree/src/tree-inline.c:1779:5: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
&& !lang_hooks_0.tree_inlining.tree_chain_matters_p( ( tree_node *)*v6) ) 
    ^~~~~~~~~~~~
    lang_hooks
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/walk_tree/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/walk_tree/src/obj/tree-inline.o] Error 1
